# ant-optimizer

./: .gitignore  Cargo.toml  batch_solve.sh  batch_video.sh  create_graphs.py  make_plot.py  make_video.sh  prep_data.sh  readme.md  run_sweep.sh
data/: A-n32-k5.txt  A-n80-k10.txt  B-n31-k5.txt  B-n78-k10.txt  P-n11-k8.txt  c101.csv  c102.csv  c103.csv  c201.csv  c202.csv  c203.csv  capacities.json  r101.csv  r102.csv  r103.csv  r201.csv  r202.csv  r203.csv  rc101.csv  rc102.csv  rc103.csv  rc201.csv  rc202.csv  rc203.csv
src/: lib.rs  main.rs
stat_collector/src/: main.rs
