[package]
name = "ant_colony"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1"
serde = { version = "1", features = ["derive"] }
rand = "0.8"
clap = { version = "4", features = ["derive"] }
num_cpus = "1"
colorgrad = "0.6"
fnv = "1"
itertools = "0.12"

# Uncomment for profiling with cargo-flamegraph
#[profile.release]
#debug = true